# C2_image_compressing

./: .gitignore  README.MD  find_chinese.py  find_chinese_translated.py  fixed_operation.vhd  fixed_operation_tb.vhd  fixed_point_array.vhd  float_to_fixed.vhd  float_to_fixed_tb.vhd  project_rapport.md  quant_used_dct_out.txt  quantization.do  quantization.vhd  quantization_tb.vhd  subsample.do  subsample.vhd  subsample_tb.vhd  translate.py  zigzag.vhd  zigzag_tb.vhd
1_YCbCr_conversion/rtl/: bram_wrapper.vhdl  conversion.vhdl  conversion_zero_center.vhdl
1_uhv/: run_sim.py
2_quantization/: quantization_tb.vhd
DockerFolder/: README.MD  run.ps1
YCbCr_conversion/: conversion.do  conversion.vhdl  conversionContainer.do  conversionContainer.vhdl  conversionContainer_tb.vhdl  conversion_no_dsp.vhdl  coversion_tb.vhdl  output_file.txt
axi/: adder_axi.v  design_1_wrapper.xsa  main.cpp
axi_examples/: jpeg_axi.v  zynq_jpeg.cpp
axi_interface/: Makefile  Makefile.myip  Makefile.self_test  README.md  axi_helper.cpp  axi_self_test.sv  axi_self_test.v  clear_result.txt  main_vitis.cpp  myip.sv  myip.v  myip_slave_lite_v1_0_S00_AXI.v  myip_slave_lite_v1_0_S00_AXI_backup.v  myip_test  myip_test.cpp  myip_test.vcd  proc_full_axi.sv  sim_main.cpp  user_core_pass_thru.sv  user_functional_module.sv  user_functional_module_use_wrapper.sv  wave.vcd
connection/: gen_put_vector.sh  interface_connection.v  run_sim.py  statemachin.vhd
connection/systemc/: CMakeLists.txt  dct_coeff_matrix.cpp  dct_tb.cpp  jpeg_tb.cpp  rgb2ycbcr_tb.cpp  run.ps1  run.sh  ubuntu.dockerfile
connection/systemc/inc/: FixedPoint.h  dct_systemc.h  fixed_point.h  jpeg_compression_pipeline_systemc.h  quantization_systemc.h  rgb2ycbcr_systemc.h  zigzag_systemc.h
connection/utils/: CMakeLists.txt  compare_1000.cpp  gen_multi_inout.cpp  gen_normal.cpp  gen_ycbcr_dct_expected.cpp
dct/: cos_coe.py  dct_1d.v  dct_1d_8x1.v  dct_1d_8x8.v  dct_2d.v  dct_2d_8x8.v  dct_2d_col.v  dct_8muladd.v  dct_coeffs.vh
dct/utils/coeff_generator/: CMakeLists.txt  dct_coeffs.vh  generator_fixed.cpp  generator_float.cpp
dct/utils/dct_verification/: CMakeLists.txt  compare_1000.cpp  compare_mem.cpp  diff_distribution_16384.csv  fixed_full_intervalue.cpp  fixed_intervalue_generator.cpp  multi_output_131071.mem  multi_output_32768.mem  multi_output_8192.mem
dct_profiling/: Dockerfile.qemu-user  FDCT.c  analyze_dct_asm.py  analyze_qemu_log.py  dct.elf  dct.s
file_writing/: file_wr.xpr  fwrit_main.vhd  fwrit_main_tb.vhd
fixed_point/: fixed_adder.vhd  fixed_multiplier.vhd  fixed_multiplier_16.vhd
fixed_point_analysis/: dct_compare.cpp
fixedpoint_test/: dct_repeat.cpp  main.cpp  visualize_dct_error.py
generate_images/: generate_images.py
huffman/: huffman.c  huffman.h  main.c
hwacc/: CMakeLists.txt  example_usage.cpp  pl_jpeg_encoder.cpp  pl_jpeg_encoder.h  zynq_sd_jpeg.cpp
ip/: jpeg.tcl
ip_folder/: README.MD  component.xml
matlab/: Cb.txt  Cr.txt  README.MD  Y.txt  auto_run.m  chromasub.m  compression.asv  compression.m  compression_bin.m  compression_get_intervalue.m  compression_ref.m  dct_inv.m  dct_tr.m  decoding.m  encoding.m  entropy.m  file_writing.asv  file_writing.m  huffman_ac_cbcr.m  huffman_ac_y.m  huffman_dc_cbcr.m  huffman_dc_y.m  matrix_writing.m  photo.txt  profiling_log.txt  quant.m  quantization.vhd  quantization_tb.vhd  reader.m  reconstruct.m  rgb.txt
matlab_profiling/: compression.m  compression_ref.m  dec_huff.m  levelshift.txt
ps_profiling/: main.bak.cpp  stb_image_write.h
quantization/: fixed_point_array.vhd  quantization.vhd  quantization_tb.vhd
raw_process/: README.MD  convert_NEF2bin.py  convert_bin2jpg.py
result_image/: compare_images.py  compression_metrics.py  compression_report.py  convert.py  dct.py  gray.py  onlyY.py  ycbcr_dct_comparison.py
saperate_module/2_dct_chen/utils/: CMakeLists.txt  FixedPoint.h  chen_valid.cpp  gen_2d_pipe_test_vectors.cpp  gen_multi_inout.cpp
software/verification_tools/fixed_point_analysis/: CMakeLists.txt  dct_from_image.cpp
time_statistic/: PROFILE.TXT  log.txt  pc_log_home.txt  plot_dct_timing.py
verification/: README.MD
verilator/: FixedPoint.h  Makefile  dct_sweep  dct_sweep_results.csv  dct_test  dct_test.cpp  sim_results.txt
(+2129 files in other folders)
